@@ -259,6 +259,7 @@ from BoolVectorData import BoolVectorDataTest
 from CompoundParameterTest import CompoundParameterTest
 from DiskPrimitiveTest import DiskPrimitiveTest
 from ClampOpTest import ClampOpTest
+from SWAReaderTest import SWAReaderTest
 
 if IECore.withASIO() :
 	from DisplayDriverTest import *
