@@ -1,0 +1,17 @@
+"Acacia_RT"
+5
+3750.05 2149.22 1556.86 0.0176831 -0.0514542 0.998519 0.0179192 -0.998498 -0.0517705 6.4516
+10128.1 2065.77 1474.61 0.00242449 0.00645126 0.999976 -0.785496 -0.618838 0.00589685 6.7
+9425.82 1196.25 1494.49 0.0195717 0.016603 0.999671 -0.998577 0.0499354 0.018721 6.4516
+10267.5 3280.42 1511.57 0.00102758 -0.0542529 0.998527 0.849215 0.527315 0.0277767 6.4516
+9963.51 1867.65 1492.22 0.0108471 0.00438685 0.999932 -0.965071 -0.261732 0.0116172 6.4516
+
+"BroadLeaf_HighDetail"
+6
+4992.25 2987.62 1541.37 0.0204418 0.0232822 0.99952 0.182835 -0.982957 0.0191572 6.4516
+8002.76 1575.52 1467.86 0.0118155 -0.000533427 0.99993 -0.999567 0.0269296 0.0118256 6.4516
+11326.5 3619.02 1525.01 0.0161139 -0.0212526 0.999644 -0.436362 0.899391 0.0261552 6.4516
+11250.2 1794.2 1518.1 -0.00424276 -0.0038985 0.999983 -0.68385 0.729622 -5.69769e-05 6.4516
+9569.3 1317.16 1465.48 0.0226227 0.0112616 0.999681 0.996807 0.0763415 -0.0234177 6.4516
+10169 1622.2 1474.08 -0.00762633 -0.0228641 0.99971 0.86754 0.497042 0.0179858 6.4516
+
